# AI-DevOps

./: .env.example  .env.test  .gitignore  DOCKER_STARTUP_GUIDE.md  Dockerfile  Dockerfile.dev  FEATURES.md  FRONTEND_DEPLOYMENT_GUIDE.md  INSTALLATION_AND_USER_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  alembic.ini  cleanup.sh  deploy-frontend.sh  docker-compose.prod.yml  docker-compose.yml  package.json  pytest.ini  requirements.txt  start.sh  test_llm_integration.py
.claude/: CLAUDE.md  settings.local.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_celery_task_id_to_jobs.py  003_add_cache_fields_to_jobs.py
docs/: ARCHITECTURE.md  BUILD_SUCCESS_REPORT.md  CICD需求.md  DOCKER_BUILD_GUIDE.md  DOCKER_BUILD_TEST_REPORT.md  ENVIRONMENT_SETUP.md  IMPLEMENTATION_PLAN.md  REQUIREMENTS.md
docs/archive/: 2026-03-09_E2E_TEST_RESULTS.md  2026-03-10_DATABASE_MIGRATION_GUIDE.md  2026-03-10_IMPLEMENTATION_ANALYSIS.md  2026-03-10_INTEGRATION_TEST_SUMMARY.md  2026-03-10_P0_P1_TASKS_COMPLETION.md  API_ENDPOINT_COMPLETION_REPORT.md  BUILD_ENGINE_PHASE1_SUMMARY.md  BUILD_ENGINE_PHASE2_SUMMARY.md  BUILD_ENGINE_PHASE4_SUMMARY.md  README.md  (+15 more)
examples/cpp-calculator/: CMakeLists.txt  README.md
examples/cpp-calculator/include/: calculator.h
examples/cpp-calculator/src/: calculator.cpp
frontend/: .env.production  API_SERVICES_SUMMARY.md  DASHBOARD_API_INTEGRATION_COMPLETE.md  DASHBOARD_INTEGRATION_SUMMARY.md  Dockerfile  FRONTEND_COMPLETION_REPORT.md  FRONTEND_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  SKELETON_EMPTY_STATE_INTEGRATION_GUIDE.md  WEBSOCKET_INTEGRATION_SUMMARY.md  nginx.conf  vite.config.ts
k8s/: DEPLOYMENT.md
scripts/: QUICKSTART.md  README.md  deploy.sh  fix-and-test.sh  fix-docker-permissions.sh  init_db.py  migrate_db.py  migrate_sqlite_to_postgres.py  run-integration-tests.sh  setup-environment.sh  start-all.sh  start-backend.sh  start-frontend.sh  start-test-env.sh  test-docker-build.sh  validate-dockerfiles.sh
src/: __init__.py  main.py
static/: index.html
tests/: README.md  manual_test_webhook.py  test_webhook.sh
tests/e2e/qt_projects/scenario1_missing_header/: CMakeLists.txt  calculator.cpp  calculator.h  main.cpp
tests/e2e/qt_projects/scenario1_missing_header/tests/: CMakeLists.txt  tst_calculator.cpp
tests/e2e/qt_projects/scenario2_link_error/: CMakeLists.txt  main.cpp
tests/e2e/qt_projects/scenario3_test_failure/: CMakeLists.txt  calculator.cpp  calculator.h  main.cpp
tests/e2e/qt_projects/scenario3_test_failure/tests/: CMakeLists.txt  tst_calculator.cpp
(+216 files in other folders)
